--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">NapoleoN</string>
+
+    <!-- BEGIN GENERAL LABELS -->
+    <string name="label_done">Akzeptieren</string>
+    <string name="label_cancel">Abbrechen</string>
+    <!-- END GENERAL LABELS -->
+
+    <!-- BEGIN LANDING STRINGS -->
     <string name="label_register">Registrierung</string>
     <string name="label_account_recovery">Kontowiederherstellung</string>
     <string name="label_language_selection">Wählen Sie eine Sprache</string>
-    <string name="label_done">Akzeptieren</string>
-    <string name="label_cancel">Abbrechen</string>
-    <string name="app_name">NapoleoN</string>
+    <string name="label_fill_form_to_create_account">Wenn Sie einen neuen Benutzer erstellen möchten, füllen Sie das folgende Formular aus</string>
+    <string name="hint_required_nickname">Apodo</string>
+    <string name="name_to_show">Nombre a mostrar</string>
+    <string name="label_terms">Al hacer click en Registro, aceptaras los</string>
+    <string name="label_terms_and_conditions">términos, condiciones y políticas de privacidad.</string>
+    <!-- END LANDING STRINGS -->
 </resources>
