--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="label_account_recovery">Account Recovery</string>
-    <string name="label_cancel">Cancel</string>
-    <string name="label_done">Accept</string>
-    <string name="label_language_selection">Select language</string>
-    <string name="label_register">Register</string>
     <string name="app_name">NapoleoN</string>
+
+    <!-- BEGIN GENERAL LABELS -->
+    <string name="label_done">Accept</string>
+    <string name="label_cancel">Cancel</string>
+    <!-- END GENERAL LABELS -->
+
+    <!-- BEGIN LANDING STRINGS -->
+    <string name="label_register">Register</string>
+    <string name="label_account_recovery">Account Recovery</string>
+    <string name="label_language_selection">Select language</string>
+    <string name="label_fill_form_to_create_account">If you want create a new user complete the following form</string>
+    <string name="hint_required_nickname">Apodo</string>
+    <string name="name_to_show">Nombre a mostrar</string>
+    <string name="label_terms">Al hacer click en Registro, aceptaras los</string>
+    <string name="label_terms_and_conditions">términos, condiciones y políticas de privacidad.</string>
+    <!-- END LANDING STRINGS -->
 </resources>
