--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">NapoleoN</string>
-    <string name="label_account_recovery">Recuperação de Conta</string>
-    <string name="label_cancel">Cancelar</string>
+
+    <!-- BEGIN GENERAL LABELS -->
     <string name="label_done">Aceitar</string>
-    <string name="label_language_selection">Selecione o idioma</string>
+    <string name="label_cancel">Cancelar</string>
+    <!-- END GENERAL LABELS -->
+
+    <!-- BEGIN LANDING STRINGS -->
     <string name="label_register">Registo</string>
+    <string name="label_account_recovery">Recuperação de Conta</string>
+    <string name="label_language_selection">Selecione o idioma</string>
+    <string name="label_fill_form_to_create_account">Se você deseja criar um novo usuário, preencha o seguinte formulário</string>
+    <string name="hint_required_nickname">Apodo</string>
+    <string name="name_to_show">Nombre a mostrar</string>
+    <string name="label_terms">Al hacer click en Registro, aceptaras los</string>
+    <string name="label_terms_and_conditions">términos, condiciones y políticas de privacidad.</string>
+    <!-- END LANDING STRINGS -->
 </resources>
