--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -8,13 +8,22 @@
     <!-- END GENERAL LABELS -->
 
     <!-- BEGIN LANDING STRINGS -->
-    <string name="label_register">Registo</string>
-    <string name="label_account_recovery">Recuperação de Conta</string>
+    <string name="label_create_account">Criar uma conta</string>
+    <string name="label_recover_account">Recuperar conta</string>
     <string name="label_language_selection">Selecione o idioma</string>
-    <string name="label_fill_form_to_create_account">Se você deseja criar um novo usuário, preencha o seguinte formulário</string>
-    <string name="hint_required_nickname">Apodo</string>
-    <string name="name_to_show">Nombre a mostrar</string>
-    <string name="label_terms">Al hacer click en Registro, aceptaras los</string>
-    <string name="label_terms_and_conditions">términos, condiciones y políticas de privacidad.</string>
     <!-- END LANDING STRINGS -->
+
+    <!-- BEGIN REGISTER STRINGS -->
+    <string name="label_fill_form_to_create_account">Se você deseja criar um novo usuário, preencha o seguinte formulário</string>
+    <string name="hint_required_nickname">Apelido*</string>
+    <string name="display_name">Nome de exibição</string>
+    <string name="label_terms">Ao clicar em Registro, você aceita o</string>
+    <string name="label_terms_and_conditions">termos, condições e políticas de privacidade.</string>
+    <string name="nickname_required">O apelido é obrigatório.</string>
+    <string name="at_least_five_characters">Pelo menos 5 caracteres</string>
+    <string name="nickname_cant_contain_white_spaces">Não pode conter espaços em branco</string>
+    <string name="cant_contain_special_characters">Não pode conter caracteres especiais</string>
+    <string name="welcome">Bem-vindo</string>
+    <string name="recovery_password">Contraseña de recuperación</string>
+    <!-- END REGISTER STRINGS -->
 </resources>
