--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,17 +5,28 @@
     <!-- BEGIN GENERAL LABELS -->
     <string name="label_done">Aceptar</string>
     <string name="label_cancel">Cancelar</string>
+    <string name="power_by" translatable="false">Powered by Napoleon Systems</string>
+    <string name="welcome">Bienvenido</string>
     <!-- END GENERAL LABELS -->
 
     <!-- BEGIN LANDING STRINGS -->
-    <string name="label_register">Registro</string>
-    <string name="label_account_recovery">Recuperación de Cuenta</string>
+    <string name="label_create_account">Crear cuenta</string>
+    <string name="label_recover_account">Recuperar cuenta</string>
     <string name="label_language_selection">Seleccionar Idioma</string>
+    <!-- END LANDING STRINGS -->
+
+    <!-- BEGIN REGISTER STRINGS -->
     <string name="label_fill_form_to_create_account">Si deseas crear un nuevo usuario completa el siguiente formulario</string>
     <string name="hint_required_nickname">Apodo*</string>
-    <string name="name_to_show">Nombre a mostrar</string>
+    <string name="display_name">Nombre a mostrar</string>
     <string name="label_terms">Al hacer click en Registro, aceptaras los</string>
     <string name="label_terms_and_conditions">términos, condiciones y políticas de privacidad.</string>
-    <string name="power_by" translatable="false">Powered by Napoleon Systems</string>
-    <!-- END LANDING STRINGS -->
+    <string name="nickname_required">El Apodo es obligatorio</string>
+    <string name="at_least_five_characters">Al menos 5 carácteres</string>
+    <string name="nickname_cant_contain_white_spaces">No puede contener espacios en blanco</string>
+    <string name="cant_contain_special_characters">No puede contener carácteres especiales</string>
+    <string name="recovery_password">Contraseña de recuperación</string>
+    <!-- BEGIN REGISTER STRINGS -->
+
+
 </resources>
