--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -10,6 +10,12 @@
     <string name="label_next">Suivant</string>
     <string name="label_available">Disponible</string>
     <string name="something_went_wrong">Quelque chose s\'est mal passé, veuillez réessayer</string>
+    <string name="label_name">Nom</string>
+    <string name="label_status">Etat</string>
+    <string name="label_blocked_contacts">Contacts bloqués</string>
+    <string name="label_share_a_state">Partager un état</string>
+    <string name="label_edit_photo">Modifier la photo</string>
+    <string name="label_edit_cover">Modifier la bannière</string>
     <!-- END GENERAL LABELS -->
 
     <!-- BEGIN LANDING STRINGS -->
@@ -74,4 +80,15 @@
     <!-- BEGIN INBOX -->
     <string name="inbox">Boîte de réception</string>
     <!-- END INBOX -->
+
+    <!-- BEGIN PROFILE -->
+    <string name="explanation_camera_and_storage_permission">Pour pouvoir modifier le profil et la photo de couverture, permettez à NapoleoN d\'accéder à votre appareil photo, à vos photos et au contenu multimédia de votre appareil.</string>
+    <!-- END PROFILE -->
+
+    <!-- BEGIN IMAGE SELECTOR -->
+    <string name="change_profile_photo">Changer la photo de profil</string>
+    <string name="change_cover_photo">Changer la photo de la bannière</string>
+    <string name="take_photo">Prendre photo</string>
+    <string name="select_photo">Sélectionnez une photo</string>
+    <!-- END IMAGE SELECTOR -->
 </resources>
